--- a/Tabelle.html
+++ b/Tabelle.html
@@ -20,14 +20,14 @@
         <table class="table" id="TeilenhmerTable">
             <thead>
                 <tr>
-                    <th onclick="sortTable(0)">Name</th>
-                    <th onclick="sortTable(1)">Vorname</th>
-                    <th onclick="sortTable(2)">Geschlecht</th> <!--Drop Down: Weiblich, Männlich, Nonbinär-->
-                    <th onclick="sortTable(3)">Geburstdatum</th>
-                    <th onclick="sortTable(4)">Alter<!--<button>!</button>--></th> <!-- Kind (bis 13), Jugendlich (14-18), Erwachsen (ab18 - dann auch erst schwarz Gurt erlaubt)-->
-                    <th onclick="sortTable(5)">Nationalität</th>
-                    <th onclick="sortTable(6)">Verein</th>
-                    <th onclick="sortTable(7)">Graduierung</th> <!--Mokuroku (Weiß)  (木録) - Grundstufe 6.Kyu
+                    <th onclick="sortTable('Name')">Name</th>
+                    <th onclick="sortTable('Vorname')">Vorname</th>
+                    <th onclick="sortTable('Geschlecht')">Geschlecht</th> <!--Drop Down: Weiblich, Männlich, Nonbinär-->
+                    <th onclick="sortTable('Geburstdatum')">Geburstdatum</th>
+                    <th onclick="sortTable('Alter')">Alter<!--<button>!</button>--></th> <!-- Kind (bis 13), Jugendlich (14-18), Erwachsen (ab18 - dann auch erst schwarz Gurt erlaubt)-->
+                    <th onclick="sortTable('Nationalität')">Nationalität</th>
+                    <th onclick="sortTable('Verein')">Verein</th>
+                    <th onclick="sortTable('Graduierung')">Graduierung</th> <!--Mokuroku (Weiß)  (木録) - Grundstufe 6.Kyu
                                             Shoden (Gelb)  (初伝) - Erste Stufe 5. Kyu
                                             Chuden (Orange)  (中伝) - Mittelstufe 4. Kyu
                                             Okuden (Grün) (奥伝) - Innere Stufe 3.Kyu
@@ -178,7 +178,6 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-    <script src="js/TabelSort.js"></script>
     <script src="js/switchPage.js"></script>
 
     <script type="module">
@@ -200,7 +199,9 @@
         // Initialize Firebase
         const app = initializeApp(firebaseConfig);
 
-        import{getDatabase, ref, get, set, update, remove, onValue, child} from "https://www.gstatic.com/firebasejs/10.10.0/firebase-database.js";
+        import{getDatabase, ref, get, set, update, remove, onValue, child,
+            query, limitToFirst, limitToLast, orderByChild, startAt, endAt, endBefore, equalTo
+        } from "https://www.gstatic.com/firebasejs/10.10.0/firebase-database.js";
         const db = getDatabase();     
 
 
@@ -323,13 +324,15 @@
             }
         });
 
+
         //-------------Getting all Data ----------->
         function GetAllDataRealTime() {
-            const dbRef = ref(db, "Tabellen/" + tableName + "/Teilnehmer");
+
+            const dbRef = query(ref(db, "Tabellen/" + tableName + "/Teilnehmer"), orderByChild("Geschlecht"));
 
             onValue(dbRef, (snapshot) => {  
                 tbody.innerHTML = ''; // Clear the existing rows
-                
+
                 snapshot.forEach(childSnapshot => {
                     var num = childSnapshot.key; // Die eindeutige Nummer aus der Datenbank abrufen
                     // Hier rufen Sie die Teilnehmerdaten unter Verwendung von num als Schlüssel ab
@@ -337,7 +340,6 @@
                     get(teilnehmerRef).then((snapshot) => {
                         var data = snapshot.val();
                         if (data) {
-                            console.log("Data:", data);
                             data.Nummer = num; // Fügen Sie die Teilnehmernummer zu den Teilnehmerdaten hinzu
                             console.log("Nummer:", num);
                             AddTeilnehmer(data);
@@ -663,8 +665,6 @@
     // Event-Listener für den Speichern-Button
     document.getElementById('saveRatingBtn').addEventListener('click', saveDataToFirebase);
 
-
-    //--------Sortieren der Tabelle-------->
     </script>
 </body>
 </html>
