first attempt to make the print

--- a/Tabelle.html
+++ b/Tabelle.html
@@ -10,7 +10,7 @@
 
 <body>
     <button id="backBtn">Zurück Starseite</button>
-    <button id="printAllBtn">alle Auswertungsbogen ausdrucken</button>
+    <button id="print">alle Auswertungsbogen ausdrucken</button>
     <button id="FinalTableBtn">Zur Auswertungsliste</button>
     <button id="RegelnBtn">Regelwerk</button>
 
