--- a/Gast/GastStartseite.html
+++ b/Gast/GastStartseite.html
@@ -80,7 +80,7 @@
             td2.innerHTML = data;
             td3.innerHTML = teilnehmer ? teilnehmer.length : 0; // Anzahl der Teilnehmer
             ControlDiv.innerHTML = '<button type="button" class="btn btn-primary my-2 ml-2 auswählen-button">Auswählen</button>'
-            ControlDiv.innerHTML += '<button id="löschen-button-id" type="button" class="btn btn-primary my-2 ml-2" data-toggle="modal" data-target="#exampleModalCenter">Löschen</button>'
+            //ControlDiv.innerHTML += '<button id="löschen-button-id" type="button" class="btn btn-primary my-2 ml-2" data-toggle="modal" data-target="#exampleModalCenter">Löschen</button>'
 
             // Ereignislistener für den "Auswählen" Button hinzufügen
             var auswahlButton = ControlDiv.querySelector('.auswählen-button');
