--- a/Tabelle.html
+++ b/Tabelle.html
@@ -56,13 +56,13 @@
                     <td> <input placeholder="Nationalität" type="text" id="nation" /> </td>
                     <td> <input placeholder="Verein" type="text" id="verein" /> </td>
                     <td>    <select id="rankID" aria-label="Graduierung">
-                        <option value="6.Kyu (weiß)">6.Kyu (weiß)</option>
-                        <option value="5.Kyu (gelb)">5.Kyu (gelb)</option>
-                        <option value="4.Kyu (orange)">4.Kyu (orange)</option>
-                        <option value="3.Kyu (grün)">3.Kyu (grün)</option>
-                        <option value="2.Kyu (blau)">2.Kyu (blau)</option>
-                        <option value="1.Kyu (braun)">1.Kyu (braun)</option>
-                        <option value="Dan">Dan</option>
+                        <option value="6.Kyu">6.Kyu</option> <!--weiß-->
+                        <option value="5.Kyu">5.Kyu</option> <!--gelb-->
+                        <option value="4.Kyu">4.Kyu</option> <!--orange-->
+                        <option value="3.Kyu">3.Kyu</option> <!--grün-->
+                        <option value="2.Kyu">2.Kyu</option> <!--blau-->
+                        <option value="1.Kyu">1.Kyu</option> <!--braun-->
+                        <option value="Dan">Dan</option> <!--schwarz-->
                     </select> </td>
                     <td></td>
                     <td><button id="AddBtn">Hinzufügen</button>
@@ -103,13 +103,13 @@
                 <input type="text" id="VereinMod"/> <br>
                 <label class="labs"> Graduierung: </label>
                 <select id="RankMod" aria-label="Graduierungt">
-                    <option value="6.Kyu (weiß)">6.Kyu (weiß)</option>
-                    <option value="5.Kyu (gelb)">5.Kyu (gelb)</option>
-                    <option value="4.Kyu (orange)">4.Kyu (orange)</option>
-                    <option value="3.Kyu (grün)">3.Kyu (grün)</option>
-                    <option value="2.Kyu (blau)">2.Kyu (blau)</option>
-                    <option value="1.Kyu (braun)">1.Kyu (braun)</option>
-                    <option value="Dan">Dan</option>
+                    <option value="6.Kyu">6.Kyu</option> <!--weiß-->
+                    <option value="5.Kyu">5.Kyu</option> <!--gelb-->
+                    <option value="4.Kyu">4.Kyu</option> <!--orange-->
+                    <option value="3.Kyu">3.Kyu</option> <!--grün-->
+                    <option value="2.Kyu">2.Kyu</option> <!--blau-->
+                    <option value="1.Kyu">1.Kyu</option> <!--braun-->
+                    <option value="Dan">Dan</option> <!--schwarz-->
                 </select>
             </div>
             <div class="modal-footer">
